Make it works for other admin path than root

--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -7,7 +7,7 @@
         //TODO: check if miniserver is connected/available
         //TODO: add spinner while loading miniserver structure
         var configNodeId = $('#node-input-miniserver').val();
-        var url = '/struct?id=' + configNodeId;
+        var url = './struct?id=' + configNodeId;
 
         $('#return-msg').text('');
 
