Align icon to right for loxone-out

--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -353,6 +353,7 @@
         inputs: 1,
         outputs: 0,
         icon: "loxone.png",
+        align: "right",
         label: function () {
             return this.name || "loxone";
         },
