--- a/loxone/loxone.html
+++ b/loxone/loxone.html
@@ -439,13 +439,13 @@
         <input type="text" id="node-config-input-username">
     </div>
     <div class="form-row">
-        <label for="node-config-input-port"><i class="fa fa-lock"></i> Password</label>
+        <label for="node-config-input-password"><i class="fa fa-lock"></i> Password</label>
         <input type="password" id="node-config-input-password">
     </div>
     <div class="form-row">
         <label></label>
         <input type="checkbox" id="node-config-input-encrypted" style="display:inline-block; width:auto; vertical-align:top;">
-        <label style="width: 70%;">
+        <label style="width: 70%;" for="node-config-input-encrypted">
             Use AES Encryption?
         </label>
     </div>
